# confluence-mcp-skills

./: README.md
confluence-copilot-skills/: mcp.json  mcp_server.py  pyproject.toml  requirements.txt
confluence-copilot-skills/src/confluence_skills/: add_attachment.py  read_template.py  template_engine.py
confluence-copilot-skills/templates/: api_documentation.json
confluence-copilot-skills/tests/: test_read_template.py  test_template_engine.py
src/confluence_skills/: __init__.py  client.py  create_page.py  edit_page.py
templates/: meeting_notes.json  runbook.json
