[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "confluence-copilot-skills"
version = "1.0.0"
description = "Confluence REST API skills exposed as MCP tools for GitHub Copilot"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "python-dotenv>=1.0",
    "mcp>=1.3",
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "jinja2>=3.1",
    "rich>=13.7",
    "click>=8.1",
]

[project.scripts]
confluence-mcp = "mcp_server:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
